# Consensus-MCP

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  ORCHESTRATION.md  README.md  docker-compose.test.yml  docker-compose.yml  learnings.md  opencode.json  pyproject.toml
.windsurf/: mcp.json
consensus_mcp/: __init__.py  server.py
consensus_mcp/templates/: base.css  create_session.html  session_detail.html  sessions.html
tests/: __init__.py  test_session_manager.py  test_tools.py
