[project]
name = "consensus-mcp"
version = "0.1.0"
description = "MCP server for collaborative consensus building among AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastmcp>=2.0.0", "jinja2>=3.0.0", "pytest>=7.0.0", "markdown>=3.7.0"]

[project.scripts]
consensus-mcp = "consensus_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["consensus_mcp"]